--- a/lib_plugin_core/src/main/AndroidManifest.xml
+++ b/lib_plugin_core/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kim.hsl.plugin">
 
+    <application>
+        <activity android:name=".StubActivity"></activity>
+    </application>
+
 </manifest>
