--- a/host/build.gradle
+++ b/host/build.gradle
@@ -4,10 +4,9 @@ plugins {
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.plugin_hook"
+        applicationId "com.example.host"
         minSdkVersion 28
         targetSdkVersion 28
         versionCode 1
@@ -30,12 +29,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // 依赖插件化依赖库
     implementation project(path: ':lib_plugin_core')
